[gd_scene load_steps=4 format=3 uid="uid://bc0xjk24cdtpk"]

[ext_resource type="Script" uid="uid://uci4ksmteere" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Theme" uid="uid://2vmj5q8dyyau" path="res://button_theme.tres" id="2_myx47"]
[ext_resource type="AudioStream" uid="uid://65j4g5g4ork8" path="res://audio/sfx/select.wav" id="3_kukqi"]

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
z_index = 4096
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_myx47")
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.105882, 0, 0, 0.25098)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 270.0
offset_right = 1920.0
offset_bottom = 810.0

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="resume" type="Button" parent="CenterContainer/MenuButtons"]
layout_mode = 2
theme = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 75
text = "RESUME"

[node name="settings" type="Button" parent="CenterContainer/MenuButtons"]
layout_mode = 2
theme = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 75
text = "SETTINGS"

[node name="quit" type="Button" parent="CenterContainer/MenuButtons"]
layout_mode = 2
theme = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="fullscreen" type="Button" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 75
text = "Fullscreen"
expand_icon = true

[node name="mainvolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_myx47")
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/mainvolume"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 463.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "Volume"
horizontal_alignment = 1

[node name="musicvolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_myx47")
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/musicvolume"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 464.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1

[node name="sfxvolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_myx47")
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/sfxvolume"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 463.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "Sound Effects"
horizontal_alignment = 1

[node name="back" type="Button" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="MouseOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kukqi")
bus = &"SFX"

[connection signal="mouse_entered" from="CenterContainer/MenuButtons/resume" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MenuButtons/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MenuButtons/settings" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MenuButtons/settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MenuButtons/quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MenuButtons/quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="CenterContainer/SettingsMenu/fullscreen" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="mouse_entered" from="CenterContainer/SettingsMenu/mainvolume" to="." method="_on_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/mainvolume" to="." method="_on_mainvolume_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/SettingsMenu/musicvolume" to="." method="_on_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/musicvolume" to="." method="_on_musicvolume_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/SettingsMenu/sfxvolume" to="." method="_on_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/sfxvolume" to="." method="_on_sfxvolume_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/SettingsMenu/back" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/back" to="." method="_on_back_pressed"]
